# interactive-speaker-recognition

./: .gitignore  README.md  setup.cfg
isr/: common.py  train_enquirer.py  train_guesser.py
isr/data/: extract_kaldi_xvectors.sh  kaldi_to_numpy_raw.py  timit.py
reports/: issues.md  v01_issues.md  v02_report.md
src/: data_processing.py  enquirer.py  enquirer_for_guesser.py  enquirer_for_verifier.py  envtools.py  extract_kaldi_xvectors.sh  guesser.py  heuristic_agent.py  kaldi_to_numpy.py  kaldi_to_numpy_raw.py  nnet.py  ppo.py  select_words.py  timit.py  train_enquirer.py  train_guesser.py  verifier.py
src/isr/: cpc.py  envtools.py  nnet.py  ppo.py  simple_agents.py  timit.py  utils.py
src/isr/data/: extract_kaldi_xvectors.sh  timit.py
tests/: test_agents.py  test_cpc.py  test_envtools.py  test_nnet.py  test_utils.py
