[metadata]
name = isr
version = 0.1.0

[options]
packages = find:
package_dir =
    =src
install_requires = 
    torch >= 1.3.0
    pytorch-lightning
    matplotlib
    pandas
    librosa
    kaldi-io

[options.extras_require]
FULL =
    tensorboard
    torch-tb-profiler
    flake8
    pytest

[options.packages.find]
where=src
