[metadata]
name = isr
version = 0.2.4

[options]
packages = find:
package_dir =
    =src
install_requires = 
    torch >= 1.13.0
    pytorch-lightning
    tensorboard
    matplotlib
    pandas
    librosa
    kaldi-io
    click

[options.extras_require]
FULL =
    torch-tb-profiler
    flake8
    pytest

[options.packages.find]
where=src
